# snarky

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md  demo.sh  run-container.sh  test.sh
backend/: Cargo.toml  README.md
backend/benches/: elements.rs  operations.rs
backend/examples/: main.rs
backend/src/: elements.rs  lib.rs  operations.rs  rc_bls12_381.rs
backend/tests/: test_group.rs  test_group_elements.rs  test_group_operations.rs  test_operations.rs  test_scalars.rs
benches/: backend.rs  dlog.rs  flow.rs  sample.rs
circuits/: Cargo.toml  README.md
circuits/benches/: qap.rs
circuits/examples/: main.rs
circuits/src/: lib.rs
circuits/tests/: test_qap.rs
examples/: backend.rs  dlog.rs  dlog_proofs.rs  flow.rs  pairing.rs  polynomial.rs  sample.rs
polynomials/: Cargo.toml  README.md
polynomials/benches/: univariate.rs
polynomials/examples/: main.rs
polynomials/src/: error.rs  lib.rs
polynomials/tests/: test_univariate.rs
protocol/: Cargo.toml  README.md
protocol/benches/: dlog.rs  flow.rs
protocol/examples/: dlog.rs  flow.rs
protocol/src/: batch.rs  dlog.rs  flow.rs  lib.rs  main.rs  prover.rs  srs.rs  updater.rs  verifier.rs
protocol/tests/: batch.rs  dlog.rs  flow.rs  rho.rs  srs.rs
src/: backend.rs  constraints.rs  dlog.rs  error.rs  flow.rs  lib.rs  polynomial.rs
src/context/: mod.rs
tests/: sample_test.rs
tests/common/: mod.rs
util/: Cargo.toml  README.md
util/src/: error.rs  lib.rs  macros.rs  parser.rs  rand.rs  rand_helper.rs
