[package]
name = "snarky"
version = "0.1.0"
authors = ["fmerg <fmerg@grnet.gr>"]
edition = "2018"

[dependencies]
ark-ec = { path="./depends/algebra/ec" }
ark-poly = { path="./depends/algebra/poly" }
bls12_381 = "0.4.0"
rand = "0.8.3"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "sample"
harness = false
