[package]
name = "backend"
version = "0.1.0"
authors = ["fmerg <fmerg@grnet.gr>"]
edition = "2018"

[dependencies]
# ark-ec = { path="../depends/algebra/ec" }
# ark-poly = { path="../depends/algebra/poly" }
bls12_381 = "0.4.0"
sha2 = "0.9.3"
rand = "0.8.3"
# sha3 = "0.9.3"

[dev-dependencies]
util = { path = "../util" }
criterion = "0.3.4"

[[bench]]
name = "elements"
harness = false

[[bench]]
name = "operations"
harness = false
