[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
bls12_381 = "0.4.0"
sha2 = "0.9.3"
# sha3 = "0.9.3"
rand = "0.8.3"
subtle = "2.4.0"

[dev-dependencies]
util = { path = "../util" }
criterion = "0.3.4"

[[bench]]
name = "elements"
harness = false

[[bench]]
name = "operations"
harness = false
