[package]
name = "circuits"
version = "0.1.0"
edition = "2018"

[dependencies]
backend = { path="../backend" }
polynomials = { path="../polynomials" }
util = { path = "../util" }

[dev-dependencies]
util = { path = "../util" }
criterion = "0.3.4"

# [[bench]]
# name = "univariate"
# harness = false
