[package]
name = "polynomials"
version = "0.1.0"
edition = "2018"

[dependencies]
util = { path = "../util" }
ark-ff = "0.2.0"
ark-poly = "0.2.0"
backend = { path="../backend" }

[dev-dependencies]
ark-bls12-381 = "0.2.0"
backend = { path="../backend" }
util = { path = "../util" }
criterion = "0.3.4"

[[bench]]
name = "univariate"
harness = false
